
		include/innocent-pear/omg.h :
		- now uses rofl<...> to issue syscalls, instead of calling
		  C library functions
		- redid pseudorandom state advancements

		include/innocent-pear/rofl.h :
		- `syscall' instructions on x86-64 are now correctly marked
		  as clobbering %rcx and %r11
		- added getpid(), getppid(), kill(...), and ioctl(...) to
		  rofl<...>

		test/test-dawg-syn.ccc ,
		test/test-dawg-syn.good :
		- reduced stress-testing to save memory during compilation

		test/test-orly.ccc :
		- added allow_all tests

2016-07-08	armv4t workaround, and value splitting.

		include/innocent-pear/rofl.h :
		- worked around register allocation issue in rofl_impl_
		  syscall<...>::syscall(...) when compiling for armv4t

		include/innocent-pear/kthxbai.h :
		- kthxbai<...> can now split integer values into parts

2016-07-06	Much saner pseudorandomness, and more for ptrace(...).

		include/innocent-pear/bbq.h :
		- now uses uint64_t instead of uint_least64_t
		- innocent_pear::impl::update_outer(...) now needs one more
		  parameter to select the pseudorandom generator

		GNUmakefile :
		- now uses uint64_t instead of uint_least64_t
		- $(conf_Have_cxx_typ_struct_bfd) ->
		  $(conf_Have_cxx_typ_struct_x20_bfd)

		bin/innocent-pear-c++.ccc ,
		include/innocent-pear/host/lolcat.h ,
		share/innocent-pear/calm.ccc ,
		share/innocent-pear/keyboard.ccc ,
		share/innocent-pear/nomnom.cc :
		- now uses uint64_t instead of uint_least64_t

		configure :
		- now looks for uint64_t instead of uint_least64_t

		include/innocent-pear/dawg.h ,
		include/innocent-pear/host/rly.h ,
		include/innocent-pear/host/srsly.h ,
		include/innocent-pear/kthxbai.h ,
		include/innocent-pear/lolwut.h ,
		include/innocent-pear/omg.h ,
		include/innocent-pear/orly.h ,
		include/innocent-pear/rofl.h ,
		include/innocent-pear/yarly.h :
		- updated update_outer(...) calls, and internal templates, to
		  select the pseudorandom generator per the number of levels

		share/innocent-pear/doge-1.ccc :